<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragment.CreateQuizFragment">

    <TextView
        android:id="@+id/create_quiz_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/createQuiz"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/input_question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/input_answer_text"
        app:layout_constraintEnd_toStartOf="@+id/input_question_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_quiz_text" />

    <EditText
        android:id="@+id/input_question_edit_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_question"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/input_answer_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_quiz_text" />

    <TextView
        android:id="@+id/input_answer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/input_fake_text"
        app:layout_constraintEnd_toStartOf="@+id/input_answer_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_question_text" />

    <EditText
        android:id="@+id/input_answer_edit_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_answer"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/input_fake_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_question_edit_text" />

    <TextView
        android:id="@+id/input_fake_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fake_answer"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/create_quiz_button"
        app:layout_constraintEnd_toStartOf="@+id/input_fake_1"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_answer_text" />

    <EditText
        android:id="@+id/input_fake_1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_fake1"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/create_quiz_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_answer_edit_text" />

    <EditText
        android:id="@+id/input_fake_2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_fake2"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_fake_1" />

    <EditText
        android:id="@+id/input_fake_3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_fake3"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_fake_2" />

    <Button
        android:id="@+id/create_quiz_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createQuiz"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_fake_3" />

</androidx.constraintlayout.widget.ConstraintLayout>